# sz-mt5stream

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  strat1.py  stream_example.py  test.py
sz_mt5stream/: __init__.py  my_types.py  utils.py
sz_mt5stream/core/: __init__.py  connection.py  executor.py  stream.py
sz_mt5stream/exceptions/: __init__.py  custom.py
sz_mt5stream/types/: __init__.py  models.py
sz_mt5stream/utils/: __init__.py  timeframes.py
